fix locations center align

--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -47,6 +47,7 @@
 @media screen and (max-width: 750px) {
     .menu_desktop{
         margin-left: 0px;
+        padding: 15px;
        }
     a{
         border-right: none;
